tests/paczka1/small_fuzzy/87385042.err
Error in line 10: 1X8wLUC S127 117,83
Error in line 1: t55jV3 S536 49,4
